--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-myconnection": "^1.0.4",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
